# ipygoody

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dodo.py  environment.yml  pyproject.toml
.github/workflows/: workflow.yml
deploy/specs/: docs.yml  lab.yml  qa.yml  run.yml
docs/examples/: basic_usage.ipynb
docs/source/: api.rst  conf.py  index.rst
notebooks/: _openmdao_models.py  _openmdao_profiler.py  basic_usage.ipynb  example.ipynb  openmdao_example.ipynb
notebooks/openmdao_example/: openmdao_example.ipynb
src/ipymetatools/: _controller.py  _utils.py
src/ipyprofiler/: _utils.py  _view.py
src/ipysensitivityprofiler/: __init__.py  _controller.py  _data.py  _model.py  _openmdao_model.py  _utils.py  _view.py
src/theia/: __init__.py  _controller.py  _data.py  _model.py  _utils.py  _view.py
tests/: test_meta.py
