[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ipyprofiler"
version = "0.0.1"
authors = [
  { name="Steven H. Berguin", email="stevenberguin@gmail.com" },
]
description = "A Jupyter widget to visualize sensitivity profiles of functions."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "bqplot>=0.12",
  "traitlets>=5.14",
  "ipywidgets>=8.1",
  "jupyterlab >=3.6,<4.0.0a0",
  "jupyterlab_widgets>3.0",
  "ipython>=8.20",
]


[project.urls]
Homepage = "https://github.com/shb84/ipyprofiler.git"
Issues = "https://github.com/shb84/ipyprofiler/issues"


[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["ipyprofiler*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["ipyprofiler.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

